[tool.poetry]
name = "anabi-scraper"
version = "0.1.0"
description = "Web scraper for ANABI auction listings"
authors = ["Valentin"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
beautifulsoup4 = "^4.12.3"
httpx = "^0.26.0"
apscheduler = "^3.10.4"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
